# shaclgen

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  Taskfile.yml  install.sh  pyproject.toml  readme.md  setup.py
.github/workflows/: test.yml
examples/: works.ttl
shaclgen/: __main__.py  constraint.py  generator.py  namespaces.json  prefixes.py  schema.py  shaclgen.py
shaclgen/prefixes/: __init__.py
shapegen/: __init__.py  __main__.py  template.py  test.txt
shapegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: helpers.py  test_interface.py  test_minimal_integration.py  test_node_types.py  test_schema_interface.py
